pagina 404 + retoques finales + terminacion futurix

--- a/index.html
+++ b/index.html
@@ -88,19 +88,16 @@
             </div>
         </section>
         <div class="edge">
-            <h3>Lorem ipsum dcu pid ita tedcup iditat e  upi ditate
-                illo numquam voluptatem nemo neque?</h3>
+            <h3>La mejor selección de salas de escape para disfrutar entre familia y amigos</h3>
         </div>
         <section class="indexRooms">
             <article>
-                <a href=""><img src="./assets/img/creep-1.jpg" alt="hombre terrorífico"></a>
+                <a href="./pages/error-404.html"><img src="./assets/img/creep-1.jpg" alt="hombre terrorífico"></a>
                 <div>
-                    <a href="">
+                    <a href="./pages/error-404.html">
                         <h2>Atrapados sin salida</h2>
                     </a>
-                    <p>Lorem ipsum dolor sibus illo?Lorem pisicing elit. Natus, velit iure id, laudantium expedita
-                        distinctio adipisci perferendis, odio sunt voluptas autem numquam quo quibusdam ipsa magni
-                        recusandae corrupti vero dignissimos?</p>
+                    <p>Luego de un largo viaje por rutas desconocidas, decides emprender la vuelta y volver tranquilo a la noche. Pero a mitad de camino descubres que el cansancio te está nublando la vista, así que decides pasar la noche en un hotel al borde de la carretera. Pronto se convertirá en una experiencia que no querrás recordar</p>
                 </div>
             </article>
             <article>
@@ -109,18 +106,16 @@
                     <a href="./pages/futurix.html">
                         <h2>Futurix Hogares</h2>
                     </a>
-                    <p>Lorem ipsum dditiis sm ipsum dolipisicing elit. Iusto assumenda, eaque aut nesciunt tenetur
-                        facilis, architecto dolorum nam optio consectetur, quae perspiciatis neque minus excepturi!
-                        Iste, dicta quaerat! Et, sapiente!</p>
+                    <p>Comprar la casa de tus sueños es fácil en el futuro, sobre todo si tienes suficiente plata. Futurix Hogares te ofrece todo lo que puedas desear de un hogar, desde comodidad hasta seguridad. Pero, qué pasaría si la casa se volviera contra ti?</p>
                 </div>
             </article>
             <article>
-                <a href=""><img src="./assets/img/mistero.jpg" alt="gorro, lupa y pipa"></a>
+                <a href="./pages/error-404.html"><img src="./assets/img/mistero.jpg" alt="gorro, lupa y pipa"></a>
                 <div>
-                    <a href="">
+                    <a href="./pages/error-404.html">
                         <h2>Sherlock Holmes vuelve</h2>
                     </a>
-                    <p>Loremlore ipslo Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium odit consequuntur libero ipsum eligendi fugiat sapiente quos repellat delectus nesciunt magnam tempora quibusdam incidunt, cumque repellendus ducimus veniam odio voluptates!stiae reprehenderit? Amet molestiae quia consequatur saepe!</p>
+                    <p>Han pasado varios años desde su último gran caso, y Holmes se hallaba en un retiro junto a su gran amigo watson. Pero de pronto una serie de asesinatos aparentemente relacionados lleva a un grupo de detectives a solicitar su ayuda porque todas las pistas conducen a un callejón sin salida</p>
                 </div>
             </article>
         </section>
@@ -139,10 +134,10 @@
         <section class="list">
             <div>
                 <ul>
-                    <a href=""><li>EVENTOS</li></a>
-                    <a href=""><li>INFO ADICIONAL</li></a>
-                    <a href=""><li>RECLAMOS</li></a>
-                    <a href=""><li>COMUNIDAD</li></a>
+                    <a href="./pages/error-404.html"><li>EVENTOS</li></a>
+                    <a href="./pages/error-404.html"><li>INFO ADICIONAL</li></a>
+                    <a href="./pages/error-404.html"><li>RECLAMOS</li></a>
+                    <a href="./pages/error-404.html"><li>COMUNIDAD</li></a>
                 </ul>
             </div>
         </section>
