--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -44,9 +44,9 @@
         <h4>contacto@life-experience.com</h4>
         <div class="border"></div>
         <section class="contactNumber">
-            <h3>Caballito<a href=""> +54911555555555</a></h3>
-            <h3>Palermo<a href=""> +54911555555555</a></h3>
-            <h3>Belgrano<a href=""> +54911555555555</a></h3>
+            <h3>Caballito<a href="../pages/error-404.html"> +54911555555555</a></h3>
+            <h3>Palermo<a href="../pages/error-404.html"> +54911555555555</a></h3>
+            <h3>Belgrano<a href="../pages/error-404.html"> +54911555555555</a></h3>
         </section>
         <section class="contactForm">
             <form class="contactFormInput">
@@ -75,10 +75,10 @@
         <section class="list">
             <div>
                 <ul>
-                    <a href=""><li>EVENTOS</li></a>
-                    <a href=""><li>INFO ADICIONAL</li></a>
-                    <a href=""><li>RECLAMOS</li></a>
-                    <a href=""><li>COMUNIDAD</li></a>
+                    <a href="../pages/error-404.html"><li>EVENTOS</li></a>
+                    <a href="../pages/error-404.html"><li>INFO ADICIONAL</li></a>
+                    <a href="../pages/error-404.html"><li>RECLAMOS</li></a>
+                    <a href="../pages/error-404.html"><li>COMUNIDAD</li></a>
                 </ul>
             </div>
         </section>
