--- a/pages/f.a.q.html
+++ b/pages/f.a.q.html
@@ -59,28 +59,28 @@
                 </div>
             </div>
             <div class="questions">    
-                <a href=""><h2>+Qué es Life Experience?</h2></a>
+                <a href="../pages/error-404.html"><h2>+Qué es Life Experience?</h2></a>
                 <p>Life Experience es una empresa dedicada a ofrecer a los usuarios una actividad diferente, en la que se sumergirán de lleno en una historia pensada y adaptada para cada grupo, experimentando en carne propia la tensión, la adrenalina, y con detalles incluídos para hacer de esta una hora inolvidable.
                     En este caso los participantes tendrán una hora para resolver los diferentes enigmas y escapar con vida a través de las distintas habitaciones de cada sala.</p>
-                <a href=""><h2>+Hasta cuántos participantes puede haber en un mismo grupo?</h2></a>
+                <a href="../pages/error-404.html"><h2>+Hasta cuántos participantes puede haber en un mismo grupo?</h2></a>
                 <p>Los participantes podrán ingresar en grupos de 2 a 8 personas.</p>
-                <a href=""><h2>+Cuántos días antes hay que hacer la reserva?</h2></a>
+                <a href="../pages/error-404.html"><h2>+Cuántos días antes hay que hacer la reserva?</h2></a>
                 <p>Las reservas funcionan con un mínimo de dos horas de anticipación, pero recomendamos reservar al menos un día antes si se trata de un día y horario de mayor concurrencia.</p>
-                <a href=""><h2>+Cuales son las horas pico?</h2></a>
+                <a href="../pages/error-404.html"><h2>+Cuales son las horas pico?</h2></a>
                 <p>Si bien esto varía cada semana, los viernes por la noche y los fines de semana es cuando mas demanda hay, así que solo tomamos reserva con seña y llegando media hora antes.</p>
-                <a href=""><h2>+Hay que llegar antes para validar la reserva?</h2></a>
+                <a href="../pages/error-404.html"><h2>+Hay que llegar antes para validar la reserva?</h2></a>
                 <p>Es necesario llegar llegar con media hora de anticipación los fines de semana, ya que si no se encuentran en el lugar, el turno se le dará a otro cliente.</p>
-                <a href=""><h2>+Tienen alguna sala abierta despues de medianoche?</h2></a>
+                <a href="../pages/error-404.html"><h2>+Tienen alguna sala abierta despues de medianoche?</h2></a>
                 <p></p>
-                <a href=""><h2>+Se puede pagar con mercado pago?</h2></a>
+                <a href="../pages/error-404.html"><h2>+Se puede pagar con mercado pago?</h2></a>
                 <p></p>
-                <a href=""><h2>+Que pasa si alguien del grupo quiere abandonar la experiencia?</h2></a>
+                <a href="../pages/error-404.html"><h2>+Que pasa si alguien del grupo quiere abandonar la experiencia?</h2></a>
                 <p></p>
-                <a href=""><h2>+Hay alguna restricción de edad para participar? </h2></a>
-                <a href=""><h2>+Lorem ipsum dolor sit amet consectetur adipisicing elit.?</h2></a>
-                <a href=""><h2>+Lorem ipsum dolor sit amet consectetur adipisicing elit.?</h2></a>
-                <a href=""><h2>+Lorem ipsum dolor sit amet consectetur adipisicing elit.?</h2></a>
-                <a href=""><h2>+Lorem ipsum dolor sit amet consectetur adipisicing elit.?</h2></a>
+                <a href="../pages/error-404.html"><h2>+Hay alguna restricción de edad para participar? </h2></a>
+                <a href="../pages/error-404.html"><h2>+Lorem ipsum dolor sit amet consectetur adipisicing elit.?</h2></a>
+                <a href="../pages/error-404.html"><h2>+Lorem ipsum dolor sit amet consectetur adipisicing elit.?</h2></a>
+                <a href="../pages/error-404.html"><h2>+Lorem ipsum dolor sit amet consectetur adipisicing elit.?</h2></a>
+                <a href="../pages/error-404.html"><h2>+Lorem ipsum dolor sit amet consectetur adipisicing elit.?</h2></a>
                 <p>Si tu pregunta no se encuentra en la lsita, ponte en contacto con nostros a 
                     <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl&pli=1#inbox?compose=GTvVlcRwPkVKRHPMqCXklPFPzgkgjzkvGFMWpxFPljGSsGnkHpjPcnjlNjMJWlHHChSqkhMncGBKk" target="_blank">sosalucas906@gmail.com</a></p>
             </div>
@@ -100,10 +100,10 @@
         <section class="list">
             <div>
                 <ul>
-                    <a href=""><li>EVENTOS</li></a>
-                    <a href=""><li>INFO ADICIONAL</li></a>
-                    <a href=""><li>RECLAMOS</li></a>
-                    <a href=""><li>COMUNIDAD</li></a>
+                    <a href="../pages/error-404.html"><li>EVENTOS</li></a>
+                    <a href="../pages/error-404.html"><li>INFO ADICIONAL</li></a>
+                    <a href="../pages/error-404.html"><li>RECLAMOS</li></a>
+                    <a href="../pages/error-404.html"><li>COMUNIDAD</li></a>
                 </ul>
             </div>
         </section>
