--- a/pages/futurix.html
+++ b/pages/futurix.html
@@ -58,7 +58,13 @@
                         Desde Futurix queremos darte todas las atenciones para que tu Vida sea más facil y placentera. Todo lo que podés necesitar, ahora te lo brinda tu Hogar, y nos aseguramos de que el Control esté en tus manos...</p>
                 </div>
             </article>
-        </section>        
+        </section>
+        <article class="futurixArticle2">
+            <p>
+                Futurix Hogares es nuestra sala principal y la mas solicitada por nuestros usuarios. Tiene la dificultad más alta que encontrarán en salas de escape, mezclando una historia apasionante e intrigante con acertijos y enigmas que parecen sencillos al principio, pero luego los dejarán pensando en su complejidad. En esta ocasión se encuentran en una casa futurista construida por la empresa Futurix Hogares, la cual asegura que sus casas son 100% inteligentes y están equipadas y preparadas para satisfacer todas las necesidades de sus clientes y que la casa se haga cargo de todo. Pero debido a un inconveniente técnico, que, según la empresa eso era algo imposible, la casa se vuelve en su contra, se cierra herméticamente por completo y anula el suministro de oxígeno, el cual se agotaría en el transcurso de una hora, y su misión es descubrir la forma de salir. Para ello es importante detectar la causa de la falla. De verdad podría deberse a una falla técnica, o será producto de un ataque informático? Serán tu y tus amigos capaces de descubrirlo? Hagan su reserva y compruébenlo.
+            </p>
+            <a href="../pages/reservas.html">Reservar</a>
+        </article>        
     </main>
     <footer>
         <section class="brands">
@@ -74,10 +80,10 @@
         <section class="list">
             <div>
                 <ul>
-                    <a href=""><li>EVENTOS</li></a>
-                    <a href=""><li>INFO ADICIONAL</li></a>
-                    <a href=""><li>RECLAMOS</li></a>
-                    <a href=""><li>COMUNIDAD</li></a>
+                    <a href="../pages/error-404.html"><li>EVENTOS</li></a>
+                    <a href="../pages/error-404.html"><li>INFO ADICIONAL</li></a>
+                    <a href="../pages/error-404.html"><li>RECLAMOS</li></a>
+                    <a href="../pages/error-404.html"><li>COMUNIDAD</li></a>
                 </ul>
             </div>
         </section>
