--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -63,79 +63,79 @@
                         <img src="../assets/img/foto-1.jpg" alt="foto random">
                     </div>
                     <h2>Sala 1</h2>
-                    <button><a href="">Reservar</a></button>
+                    <button><a href="../pages/error-404.html">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
                         <img src="../assets/img/foto-2.jpg" alt="foto random">
                     </div>
                     <h2>Sala 2</h2>
-                    <button><a href="">Reservar</a></button>
+                    <button><a href="../pages/error-404.html">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
                         <img src="../assets/img/foto-3.jpg" alt="foto random">
                     </div>
                     <h2>Sala 3</h2>
-                    <button><a href="">Reservar</a></button>
+                    <button><a href="../pages/error-404.html">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
                         <img src="../assets/img/foto-4.jpg" alt="foto random">
                     </div>
                     <h2>Sala 4</h2>
-                    <button><a href="">Reservar</a></button>
+                    <button><a href="../pages/error-404.html">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
                         <img src="../assets/img/foto-5.jpg" alt="foto random">
                     </div>
                     <h2>Sala 5</h2>
-                    <button><a href="">Reservar</a></button>
+                    <button><a href="../pages/error-404.html">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
                         <img src="../assets/img/mujer-velo-400x600.jpg" alt="mujer velo negro">
                     </div>
                     <h2>Sala 6</h2>
-                    <button><a href="">Reservar</a></button>
+                    <button><a href="../pages/error-404.html">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
                         <img src="../assets/img/mujer-velo-400x600.jpg" alt="mujer velo negro">
                     </div>
                     <h2>Sala 7</h2>
-                    <button><a href="">Reservar</a></button>
+                    <button><a href="../pages/error-404.html">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
                         <img src="../assets/img/mujer-velo-400x600.jpg" alt="mujer velo negro">
                     </div>
                     <h2>Sala 8</h2>
-                    <button><a href="">Reservar</a></button>
+                    <button><a href="../pages/error-404.html">Reservar</a></button>
                 </article>
                 <article class="card ">
                     <div>
                         <img src="../assets/img/mujer-velo-400x600.jpg" alt="mujer velo negro">
                     </div>
                     <h2>Sala 9</h2>
-                    <button><a href="">Reservar</a></button>
+                    <button><a href="../pages/error-404.html">Reservar</a></button>
                 </article>
             </div>
             <div class="bookingSchedule">
                 <i id="sedeSeleccionada">Caballito</i>
                 <h2>Viernes 15 de Octubre</h2>
                 <ul>
-                    <li><a href="">13h disponible</a></li>
-                    <li><a href="">14h disponible</a></li>
-                    <li><a href="">15h disponible</a></li>
-                    <li><a href="">16h disponible</a></li>
-                    <li><a href="">17h disponible</a></li>
-                    <li><a href="">18h disponible</a></li>
-                    <li><a href="">19h disponible</a></li>
-                    <li><a href="">20h disponible</a></li>
-                    <li><a href="">21h disponible</a></li>
-                    <li><a href="">22h disponible</a></li>
+                    <li><a href="../pages/error-404.html">13h disponible</a></li>
+                    <li><a href="../pages/error-404.html">14h disponible</a></li>
+                    <li><a href="../pages/error-404.html">15h disponible</a></li>
+                    <li><a href="../pages/error-404.html">16h disponible</a></li>
+                    <li><a href="../pages/error-404.html">17h disponible</a></li>
+                    <li><a href="../pages/error-404.html">18h disponible</a></li>
+                    <li><a href="../pages/error-404.html">19h disponible</a></li>
+                    <li><a href="../pages/error-404.html">20h disponible</a></li>
+                    <li><a href="../pages/error-404.html">21h disponible</a></li>
+                    <li><a href="../pages/error-404.html">22h disponible</a></li>
                 </ul>
             </div>
         </section>
@@ -154,10 +154,10 @@
         <section class="list">
             <div>
                 <ul>
-                    <a href=""><li>EVENTOS</li></a>
-                    <a href=""><li>INFO ADICIONAL</li></a>
-                    <a href=""><li>RECLAMOS</li></a>
-                    <a href=""><li>COMUNIDAD</li></a>
+                    <a href="../pages/error-404.html"><li>EVENTOS</li></a>
+                    <a href="../pages/error-404.html"><li>INFO ADICIONAL</li></a>
+                    <a href="../pages/error-404.html"><li>RECLAMOS</li></a>
+                    <a href="../pages/error-404.html"><li>COMUNIDAD</li></a>
                 </ul>
             </div>
         </section>
