--- a/pages/sedes.html
+++ b/pages/sedes.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" href="../assets/img/logo.png">
 </head>
 <body>
-  <header class="container-fluid bg-primary d-flex justify-content-center">
+  <header class="container-fluid d-flex justify-content-center sedesHeader">
     <section>
       <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu">
         <div class="container">
@@ -71,11 +71,10 @@
     </section>
     <section class="d-flex flex-column justify-content-center align-items-center pt-5  text-center w-50 m-auto"
       id="intro">
-      <h1 class="p-3 fs-2 border-top border-3">Una agencia única para todas tus necesidades de <span>
-          class="text-primary">Marketing Digital</span ></h1>
+      <h1 class="p-3 fs-2 border-top border-3">Una agencia única para todas tus necesidades de <span>Marketing Digital</span ></h1>
       <p class="p-3  fs-4">
-        <span class="text-primary">ExpertD.</span> es la agencia donde te ayudamos establecer tu presencia online. SEO,
-        paginas WEB, tiendas virtuales, redes sociales
+        <span class="text-primary">ExpertD.</span> es la agencia donde te ayudamos a establecer tu presencia online. SEO,
+        paginas WEB, tiendas virtuales, redes sociales, etc.
       </p>
     </section>
     <section class="w-100">
@@ -118,9 +117,9 @@
     </section>
     <section class="equipo">
       <div class="container w-50 m-auto text-center" id="equipo">
-        <h1 class="mb-5 fs-2">Equipo pequeño con <span class="text-primary">resultados Grandes</span>.</h1>
-        <p class="fs-4 ">Siempre buscamos las personas adecuadas para que trabajen con nosotros. Si te sientes listo
-          para este reto, te esperamos para que te unas a nosotros.</p>
+        <h1 class="mb-5 fs-2">Equipo pequeño con <span class="text-primary">resultados grandes</span>.</h1>
+        <p class="fs-4 ">Siempre buscamos a las personas adecuadas para que trabajen con nosotros. Si te sientes listo
+          para este reto, te esperamos para que te unas.</p>
       </div>
       <div class="mt-5 text-center">
         <img id="img-equipo"
